src/main/java/com/example/finalprojectdtomarket/_core/errors/exception2/Exception404.java
package com.example.finalprojectdtomarket._core.errors.exception2;

public class Exception404 extends RuntimeException {
    public Exception404(String msg) {
        super(msg);
    }
}